2002-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: add the icon to the hash table always so the icons aren't
	lost when the tree is recreated

2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* procman.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-17  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: don't set the icon on app creation if an icon
	already exist since there was some funny business going on with
	the panel and applets

2002-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: clean up the icon mess. Icons should now
	get added properly.

	* defaulttable.c: remove gnome-system-monitor from here
	since I'm now able to pick it up properly

	* proctable.c: gdk_pixbuf_unref->g_object_unref

2002-01-30  Kevin Vandersloot <kfv101@psu.edu>

	* defaulttable.h: change procman to gnome-system-monitor
	so that it gets a nice icon :)

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-system-monitor.schemas:
	* procman.schemas:

	Rennaming application binaries to match their
	name in the menus in order to reduce user confusion. 
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* defaulttable.h:
	* interface.c: (create_main_window):

	Change name to "System Monitor" as per the menu entry.
	
2002-01-26  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, procman.c, defaulttable.h: use procman.png
	and just copy gnome-monitor.png

2002-01-26  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add some sanity checks if gconf doesn't return any
	default values and or the values are broken. Fixes bug
	#69144. 

	* interface.c: move settings preferences to edit/prefs and
	hidden processes accordingly

2002-01-23  Havoc Pennington  <hp@pobox.com>

	* proctable.c (insert_info_to_tree): always set COL_POINTER first, 
	so that the sort function will always get a valid pointer 
	in this column.

2002-01-11  Havoc Pennington  <hp@pobox.com>

	* proctable.c (sort_ints): handle case where ints are equal, 