@@ -1,3 +1,11 @@
+2002-02-26  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: if the selected process is removed then
+	NULL it. Fixes bug #70520
+
+	* infoview.c: set the infoview tab unsensitive if
+	the selected process is NULL
+
 2002-02-24  Kevin Vandersloot <kfv101@psu.edu>
 
 	* prettytable.c: add the icon to the hash table always so the icons aren't
